--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to GitHub Pages
+name: Deploy to GitHub Pages with Local Backend
 
 on:
   push:
@@ -32,11 +32,14 @@ jobs:
           cd backend
           npm install
 
-      - name: Run Backend Locally
+      - name: Start Backend Locally
         run: |
           cd backend
-          npm run watch &
-          echo "Backend server is running in the background."
+          npm run watch & echo "Backend server is running in the background."
+
+      # Wait for the backend to start before deploying
+      - name: Wait for Backend to Start
+        run: sleep 10
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
